--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <title>Branavan Daniel Haran - Freelance Fullstack Developer!</title>
 </head>
 <body>
-    <h1 class="logo"><a href="bran-portfolio.html">BRANAVAN HARAN</h1>
+    <h1 class="logo"><a href="index.html">BRANAVAN HARAN</h1>
     <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
     <h1 class="menu"><a href="about.html">ABOUT</a></h1>
     <h1 class="about-me-title">A bit about myself...</h1>
