--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="homepage">
-        <h1 class="logo"><a href="bran-portfolio.html">BRANAVAN HARAN</h1>
+        <h1 class="logo"><a href="index.html">BRANAVAN HARAN</h1>
         <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
         <h1 class="menu"><a href="about.html">ABOUT</a></h1>
         <h1 class="slogan">Taking your notes and ideas,<br> then turning them into reality.</h1>
