adding social media links and tidying up website

--- a/about.html
+++ b/about.html
@@ -23,12 +23,18 @@
         <h1 class="text-1">My name is Branavan Daniel Haran, though I am often referred to as Bran. My journey into programming began during the latter stages of the COVID-19 pandemic in 2019. I'm passionate about software development, specializing in backend work like data scraping and API utilization, as well as frontend design and database management. I thrive on creating elegant solutions that bridge the gap between innovation and practicality.</h1>
     </div>
     <div class="resume-bttn">
-        <a href="https://cdn.discordapp.com/attachments/1020395598131769516/1164671237272903810/Resume.pdf?ex=65440f9d&is=65319a9d&hm=ed1588a51d33b288b330316a8e1cb648df74d8028ab50f7ab3e60947ecc3fda1&"><span>Click to view my Resume!</span>
+        <a href="https://cdn.discordapp.com/attachments/1020395598131769516/1164671237272903810/Resume.pdf?ex=65440f9d&is=65319a9d&hm=ed1588a51d33b288b330316a8e1cb648df74d8028ab50f7ab3e60947ecc3fda1&">
+            <span>Click to view my Resume!</span>
+        </a>
     </div>
     <div class="memeoji-class">
         <img src="memeoji.png">
     </div>
+    <div 
+        id="local-time" a href="">
+    </div>
+
     <script src="script.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>s
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html> 
