added work/experiences page,

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <h1 class="logo"><a href="index.html">BRANAVAN HARAN</h1>
     <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
     <h1 class="menu"><a href="about.html">ABOUT</a></h1>
+    <h1 class="menu"><a href="work.html">WORK</a></h1>
     <h1 class="about-me-title">A bit about myself...</h1>
     <hr>
     <div class="about-me-text">
