--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h1 class="logo"><a href="index.html">BRANAVAN HARAN</h1>
         <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
         <h1 class="menu"><a href="about.html">ABOUT</a></h1>
+        <h1 class="menu"><a href="work.html">WORK</a></h1>
         <h1 class="slogan">Taking your notes and ideas,<br> then turning them into reality.</h1>
         <hr>
         <div class="small-text-1">
