--- a/contact-me.html
+++ b/contact-me.html
@@ -16,6 +16,7 @@
     <h1 class="logo"><a href="index.html">BRANAVAN HARAN</h1>
     <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
     <h1 class="menu"><a href="about.html">ABOUT</a></h1>
+    <h1 class="menu"><a href="work.html">WORK</a></h1>
     <div class="contact-container-main">
         <h1 class="about-me-title">Drop Me A Message!</h1>
         <hr>
