--- a/work.html
+++ b/work.html
@@ -20,44 +20,47 @@
     <h1 class="about-me-title">My Work & Projects</h1>
     <hr>
     <div class="projects-container">
-        <div class="work-text">
-            Delve into my journey as a self-taught full stack developer, since 2022. Within this portfolio, you will discover a curated collection of my latest and captivating projects. Each of these endeavors showcases my dedication to crafting outstanding user experiences by harnessing my proficiency in both frontend and backend technologies, encompassing the realm of web development. Explore my body of work and my unwavering enthusiasm for the ever-evolving world of web development.
+        <div class="left-column">
+            <div class="work-text">
+                Delve into my journey as a self-taught full stack developer, since 2022. Within this portfolio, you will discover a curated collection of my latest and captivating projects. Each of these endeavors showcases my dedication to crafting outstanding user experiences by harnessing my proficiency in both frontend and backend technologies, encompassing the realm of web development. Explore my body of work and my unwavering enthusiasm for the ever-evolving world of web development.
+            </div>    
         </div>
-        <div class="experience-wrapper">
-            <a href="https://11notify.co.uk/" class="experience-link">
-                <div class="experience-container">
-                    <div class="date-header">May 2022 ━ PRESENT</div>
-                    <div class="experience-content">
-                        <div class="experience-title-11n">
-                            Backend Software Developer - 11Notify
-                        </div>
-                        <div class="experience-text">
-                            Crafted many monitors, scrapers and scripts tailored to assist collectors and resellers. These tools have been instrumental in helping resellers keep a keen eye on restocks and swiftly assess stock levels.
-                        </div>
-                        <div class="skills-bubbles">
-                            <!-- Add your skills content here if needed -->
+        <div class="right-column">
+            <div class="experience-wrapper">
+                    <div class="experience-container">
+                        <div class="experience-content" onclick="window.open(`https://11notify.co.uk/`)" style="cursor: pointer;">
+                            <div class="date-header">
+                                May 2022 ━ PRESENT
+                            </div>
+                            <div class="experience-title-11n">
+                                Backend Software Developer - 11Notify
+                            </div>
+                            <div class="experience-text">
+                                Crafted many monitors, scrapers and scripts tailored to assist collectors and resellers. These tools have been instrumental in helping resellers keep a keen eye on restocks and swiftly assess stock levels.
+                            </div>
+                            <div class="skills-bubbles">
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-        </div>
-        <div class="experience-wrapper">
-            <a href="https://auroratools.online/" class="experience-link">
-                <div class="experience-container">
-                    <div class="date-header">Oct 2022 ━ PRESENT</div>
-                    <div class="experience-content">
-                        <div class="experience-title-11n">
-                            Frontend & Backend Software Developer - Aurora Tools
-                        </div>
-                        <div class="experience-text">
-                            Crafted many monitors, scrapers and scripts tailored to assist collectors and resellers. These tools have been instrumental in helping resellers keep a keen eye on restocks and swiftly assess stock levels.
-                        </div>
-                        <div class="skills-bubbles">
-                            <!-- Add your skills content here if needed -->
+            </div>
+            <div class="experience-wrapper">
+                <a href="https://auroratools.online/" class="experience-link">
+                    <div class="experience-container">
+                        <div class="date-header">Oct 2022 ━ PRESENT</div>
+                        <div class="experience-content">
+                            <div class="experience-title-11n">
+                                Fullstack Software Developer - Aurora Tools
+                            </div>
+                            <div class="experience-text">
+                                Crafted many monitors, scrapers and scripts tailored to assist collectors and resellers. These tools have been instrumental in helping resellers keep a keen eye on restocks and swiftly assess stock levels.
+                            </div>
+                            <div class="skills-bubbles">
+                                <!-- Add your skills content here if needed -->
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>    
         </div>
     </div>
 </body>
