added changes for mobile/tablet viewing

--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
 <body>
     <div class="quote-page">
         <div class="quote-1">
-            <p>“Innovation distinguishes between a leader and a follower.”</p>
-            <p class="author">~ Steve Jobs</p>
+            <img src="steve-jobs.png" alt="sjQuote">
         </div>
     </div>
     <div class="homepage">
-        <h1 class="logo"><a href="index.html">BRANAVAN HARAN</h1>
-        <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
-        <h1 class="menu"><a href="about.html">ABOUT</a></h1>
-        <h1 class="menu"><a href="work.html">WORK</a></h1>
+        <div class="header">
+            <h1 class="logo"><a href="index.html">BRANAVAN HARAN</a></h1>
+            <div class="nav">
+                <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
+                <h1 class="menu"><a href="about.html">ABOUT</a></h1>
+                <h1 class="menu"><a href="work.html">WORK</a></h1>
+            </div>
+            <div class="burger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
         <h1 class="slogan">Taking your notes and ideas,<br> then turning them into reality.</h1>
         <hr>
         <div class="small-text-1">
