--- a/work.html
+++ b/work.html
@@ -32,34 +32,91 @@
                             <div class="date-header">
                                 May 2022 ━ PRESENT
                             </div>
-                            <div class="experience-title-11n">
-                                Backend Software Developer - 11Notify
-                            </div>
-                            <div class="experience-text">
-                                Crafted many monitors, scrapers and scripts tailored to assist collectors and resellers. These tools have been instrumental in helping resellers keep a keen eye on restocks and swiftly assess stock levels.
-                            </div>
-                            <div class="skills-bubbles">
+                            <div class="job-info">
+                                <div class="experience-title-11n">
+                                    Backend Software Developer - 11Notify
+                                </div>
+                                <div class="experience-text">
+                                    Crafted many monitors, scrapers and scripts tailored to assist collectors and resellers. These tools have been instrumental in helping resellers keep a keen eye on restocks and swiftly assess stock levels.
+                                </div>
+                                <div class="skills-container">
+                                    <div class="skill-bubbles">
+                                        Node.JS
+                                    </div>
+                                    <div class="skill-bubbles">
+                                        Javascript
+                                    </div>  
+                                    <div class="skill-bubbles">
+                                        Python
+                                    </div>  
+                                    <div class="skill-bubbles">
+                                        Discord.JS/PY
+                                    </div>  
+                                    <div class="skill-bubbles">
+                                        RESTful APIs
+                                    </div>
+                                    <div class="skill-bubbles">
+                                        Web Scraping
+                                    </div>  
+                                    <div class="skill-bubbles">
+                                        Automation
+                                    </div>
+                                    <div class="skill-bubbles">
+                                        Database Knowledge
+                                    </div>
+                                    <div class="skill-bubbles">
+                                        Data Visualisation
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
             </div>
             <div class="experience-wrapper">
-                <a href="https://auroratools.online/" class="experience-link">
-                    <div class="experience-container">
+                <div class="experience-container">
+                    <div class="experience-content" onclick="window.open(`https://auroratools.online/`)" style="cursor: pointer;">
                         <div class="date-header">Oct 2022 ━ PRESENT</div>
-                        <div class="experience-content">
+                        <div class="job-info">
                             <div class="experience-title-11n">
                                 Fullstack Software Developer - Aurora Tools
                             </div>
                             <div class="experience-text">
-                                Crafted many monitors, scrapers and scripts tailored to assist collectors and resellers. These tools have been instrumental in helping resellers keep a keen eye on restocks and swiftly assess stock levels.
+                                Actively developing an application that integrates a wide range of backend modules and tools, designed to streamline processes and enhance user experiences. With countless modules at my disposal, I've crafted a seamless GUI, demonstrating my prowess as a full-stack developer. This project highlights my ability to create innovative solutions by bridging the gap between backend integrations and user-friendly frontend interfaces.
                             </div>
-                            <div class="skills-bubbles">
-                                <!-- Add your skills content here if needed -->
+                            <div class="skills-container">
+                                <div class="skill-bubbles">
+                                    Node-JS
+                                </div>
+                                <div class="skill-bubbles">
+                                    HTML
+                                </div>
+                                <div class="skill-bubbles">
+                                    CSS
+                                </div>
+                                <div class="skill-bubbles">
+                                    React
+                                </div>
+                                <div class="skill-bubbles" id="db-skill">
+                                    MySQL
+                                    <img id="tooltip-image" src="db-snippet.png" alt="MySQL.js Tooltip" />
+                                </div>
+                                <div class="skill-bubbles">
+                                    Electron.JS
+                                </div>
+                                <div class="skill-bubbles" id="chartjs-skill">
+                                    Chart.JS
+                                    <img id="tooltip-image" src="chartjs-snippet.png" alt="Chart.js Tooltip" />
+                                </div>
+                                <div class="skill-bubbles">
+                                    Software Development
+                                </div>
+                                <div class="skill-bubbles">
+                                    Web Interface Design
+                                </div>
                             </div>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>    
         </div>
     </div>
