--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div class="quote-page">
         <div class="quote-1">
             <img src="steve-jobs.png" alt="sjQuote">
+            <p class="quote-text">"Innovation distinguishes between a leader and a follower."</p>
+            <p class="quote-author">- Steve Jobs</p>        
         </div>
     </div>
     <div class="homepage">
