updates on different dimension viewing

--- a/about.html
+++ b/about.html
@@ -14,10 +14,19 @@
     <title>Branavan Daniel Haran - Freelance Fullstack Developer!</title>
 </head>
 <body>
-    <h1 class="logo"><a href="index.html">BRANAVAN HARAN</h1>
-    <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
-    <h1 class="menu"><a href="about.html">ABOUT</a></h1>
-    <h1 class="menu"><a href="work.html">WORK</a></h1>
+    <div class="header">
+        <h1 class="logo"><a href="index.html">BRANAVAN HARAN</a></h1>
+        <div class="nav">
+            <h1 class="menu"><a href="contact-me.html">CONTACT<br>ME</a></h1>
+            <h1 class="menu"><a href="about.html">ABOUT</a></h1>
+            <h1 class="menu"><a href="work.html">WORK</a></h1>
+        </div>
+        <div class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <h1 class="about-me-title">A bit about myself...</h1>
     <hr>
     <div class="about-me-text">
