--- a/work.html
+++ b/work.html
@@ -117,7 +117,46 @@
                         </div>
                     </div>
                 </div>
-            </div>    
+            </div>   
+            <div class="experience-wrapper">
+                <div class="experience-container">
+                    <div class="experience-content" onclick="window.open(`https://spotify-aio.branh.co.uk/`)" style="cursor: pointer;">
+                        <div class="date-header">Nov 2023 ━ Jan 2024</div>
+                        <div class="job-info">
+                            <div class="experience-title-11n">
+                                Fullstack Software Development Project - Spotify AIO
+                            </div>
+                            <div class="experience-text">
+                                Pioneered the Spotify AIO (all in one), a dynamic and interactive web application that harnesses <a href="https://developer.spotify.com/documentation/web-api" target="_blank">Spotify's comprehensive online documentation</a> to fetch and display detailed the user's most listened to tracks and artists, as well as artist profiles, track data, and other related content. Leveraging Spotify's API, the application presents a rich set of data including artist information, track popularity, track durations, and much more, all within a sleek, responsive user interface that emphasizes accessibility and ease of use.
+                            </div>
+                            <div class="skills-container">
+                                <div class="skill-bubbles">
+                                    Javascript
+                                </div>
+                                <div class="skill-bubbles">
+                                    HTML
+                                </div>
+                                <div class="skill-bubbles">
+                                    CSS
+                                </div>
+                                <div class="skill-bubbles">
+                                    Chart.JS
+                                </div>
+                                <div class="skill-bubbles">
+                                    AWS Hosting
+                                </div>
+                                <div class="skill-bubbles">
+                                    OAuth 2.0
+                                </div>
+                                <div class="skill-bubbles">
+                                    RESTful APIs
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+    
+                </div>
+            </div> 
         </div>
     </div>
 </body>
