--- a/work.html
+++ b/work.html
@@ -120,6 +120,35 @@
             </div>   
             <div class="experience-wrapper">
                 <div class="experience-container">
+                    <div class="experience-content" onclick="window.open(`https://currency-converter.branh.co.uk/`)" style="cursor: pointer;">
+                        <div class="date-header">Nov 2023</div>
+                        <div class="job-info">
+                            <div class="experience-title-11n">
+                                Fullstack Software Development Project - Currency Converter
+                            </div>
+                            <div class="experience-text">
+                                Developed a user-centric Currency Converter web application, providing a streamlined solution for real-time currency exchange calculations. Utilizing the robust Exchange-Rate API, the application delivers up-to-the-minute exchange rates and currency conversions for users ranging from financial analysts to international travelers. This intuitive platform features a clean, responsive design, ensuring optimal usability across various devices and browsers. It empowers users to quickly convert amounts between multiple currencies, offering insights into the latest financial fluctuations directly through an accessible web interface.
+                            </div>
+                            <div class="skills-container">
+                                <div class="skill-bubbles">
+                                    Javascript
+                                </div>
+                                <div class="skill-bubbles">
+                                    HTML
+                                </div>
+                                <div class="skill-bubbles">
+                                    CSS
+                                </div>
+                                <div class="skill-bubbles">
+                                    RESTful APIs
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="experience-wrapper">
+                <div class="experience-container">
                     <div class="experience-content" onclick="window.open(`https://spotify-aio.branh.co.uk/`)" style="cursor: pointer;">
                         <div class="date-header">Nov 2023 ━ Jan 2024</div>
                         <div class="job-info">
@@ -154,7 +183,6 @@
                             </div>
                         </div>
                     </div>
-    
                 </div>
             </div> 
         </div>
