--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: 'Roboto Slab', sans-serif;
+            max-width: 100%;
         }
     </style>
     <title>Branavan Daniel Haran - Freelance Fullstack Developer!</title>
@@ -33,12 +34,13 @@
         <h1 class="text-1">My name is Branavan Daniel Haran, though I am often referred to as Bran. My journey into programming began during the latter stages of the COVID-19 pandemic in 2019. I'm passionate about software development, specializing in backend work like data scraping and API utilization, as well as frontend design and database management. I thrive on creating elegant solutions that bridge the gap between innovation and practicality.</h1>
     </div>
     <div class="resume-bttn">
-        <a href="https://cdn.discordapp.com/attachments/1020395598131769516/1164671237272903810/Resume.pdf?ex=65440f9d&is=65319a9d&hm=ed1588a51d33b288b330316a8e1cb648df74d8028ab50f7ab3e60947ecc3fda1&">
-            <span>Click to view my Resume!</span>
+        <a href="https://cdn.discordapp.com/attachments/1020395598131769516/1204167633910628362/B._Harans_CV.pdf?ex=65d3bf80&is=65c14a80&hm=76fef35df924544dc8a8b7f53eb5b91f70b43fc15bfde5ce2f7bf97fc8f627e6&">
+            <span>Click to download my Resume!</span>
         </a>
     </div>
-    <div class="memeoji-class">
-        <img src="memeoji.png">
+    <div class="resume-display">
+        <img id="resumeImage" src="https://cdn.discordapp.com/attachments/1020395598131769516/1204166528006750218/image.png?ex=65d3be78&is=65c14978&hm=46e87ff2dcbd4571980a84c457b9bf1fdef03f5ff0a5a6b22b9891fece881417&" alt="resume page 1" />
+        <button onclick="nextPage()">➡</button>
     </div>
     <div 
         id="local-time" a href="">
