--- a/contact-me.html
+++ b/contact-me.html
@@ -50,11 +50,11 @@
                     <img src="linkedin.png" alt="linkedin-logo">
                 </a>    
             </div>
-        </div>
-        <div class="sm-bttns">
-            <a href="https://github.com/branh02">
-                <img src="github.png" alt="github">
-            </a>
+            <div class="linkedin-link">
+                <a href="https://github.com/branh02">
+                    <img src="github.png" alt="github">
+                </a>    
+            </div>
         </div>
     </div>
 
