--- a/work.html
+++ b/work.html
@@ -96,14 +96,14 @@
                                 <div class="skill-bubbles">
                                     React
                                 </div>
-                                <div class="skill-bubbles" id="db-skill">
+                                <div class="skill-bubbles">
                                     MySQL
                                     <img id="tooltip-image" src="db-snippet.png" alt="MySQL.js Tooltip" />
                                 </div>
                                 <div class="skill-bubbles">
                                     Electron.JS
                                 </div>
-                                <div class="skill-bubbles" id="chartjs-skill">
+                                <div class="skill-bubbles">
                                     Chart.JS
                                     <img id="tooltip-image" src="chartjs-snippet.png" alt="Chart.js Tooltip" />
                                 </div>
